--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "1cdb63ad",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "8c1640ae",
    "metadata": {},
    "outputs": [
@@ -91,37 +91,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>464141</td>\n",
        "      <td>3</td>\n",
        "      <td>5224.50</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>382.0</td>\n",
+       "      <td>378.0</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>-368.0</td>\n",
+       "      <td>-364.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>468973</td>\n",
        "      <td>2</td>\n",
        "      <td>718.45</td>\n",
        "      <td>133.0</td>\n",
        "      <td>ACHOC NESCAU 200GR</td>\n",
-       "      <td>233.0</td>\n",
+       "      <td>226.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-230.0</td>\n",
+       "      <td>-223.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>444365</td>\n",
+       "      <td>470878</td>\n",
        "      <td>2</td>\n",
-       "      <td>1454.60</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML UVA</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>698.87</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>FITA ADES EMPAC TEK BOND TRANSP 48MMX40M</td>\n",
+       "      <td>1200.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-23.0</td>\n",
+       "      <td>-1200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -130,9 +130,9 @@
        "      <td>303.98</td>\n",
        "      <td>8.0</td>\n",
        "      <td>SAB LUX 125GR BUQUE DE JASMIM</td>\n",
-       "      <td>590.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-590.0</td>\n",
+       "      <td>580.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-579.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -152,9 +152,20 @@
        "      <td>29.04</td>\n",
        "      <td>2.0</td>\n",
        "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
-       "      <td>368.0</td>\n",
+       "      <td>366.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-368.0</td>\n",
+       "      <td>-366.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>474139</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85.35</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>SAND HAV FEM SLIM GLITTER II CANYON 37/8</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-13.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,20 +173,22 @@
       ],
       "text/plain": [
        "       COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "0   464141          3      5224.50        90.0   \n",
-       "2   468973          2       718.45       133.0   \n",
-       "4   444365          2      1454.60        41.0   \n",
+       "1   464141          3      5224.50        90.0   \n",
+       "3   468973          2       718.45       133.0   \n",
+       "4   470878          2       698.87        56.0   \n",
        "8   450655          2       303.98         8.0   \n",
        "17  280000          2       182.79         2.0   \n",
        "18  428511          2        29.04         2.0   \n",
+       "22  474139          2        85.35         2.0   \n",
        "\n",
-       "                               Descrição   Estoque  BLOQUEADO    var  \n",
-       "0                 CREME LEITE TIROL 200GR    382.0       14.0 -368.0  \n",
-       "2                      ACHOC NESCAU 200GR    233.0        3.0 -230.0  \n",
-       "4       SUCO NUTRINECTAR PRONTO 200ML UVA     23.0        0.0  -23.0  \n",
-       "8           SAB LUX 125GR BUQUE DE JASMIM    590.0        0.0 -590.0  \n",
-       "17         LIMP VEJA 500ML M USO ORIGINAL      7.0        0.0   -7.0  \n",
-       "18  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA    368.0        0.0 -368.0  "
+       "                                  Descrição   Estoque  BLOQUEADO     var  \n",
+       "1                    CREME LEITE TIROL 200GR    378.0       14.0  -364.0  \n",
+       "3                         ACHOC NESCAU 200GR    226.0        3.0  -223.0  \n",
+       "4   FITA ADES EMPAC TEK BOND TRANSP 48MMX40M   1200.0        0.0 -1200.0  \n",
+       "8              SAB LUX 125GR BUQUE DE JASMIM    580.0        1.0  -579.0  \n",
+       "17            LIMP VEJA 500ML M USO ORIGINAL      7.0        0.0    -7.0  \n",
+       "18     ESPONJA 3M LIMPEZA SC BRITE NAO RISCA    366.0        0.0  -366.0  \n",
+       "22  SAND HAV FEM SLIM GLITTER II CANYON 37/8     13.0        0.0   -13.0  "
       ]
      },
      "metadata": {},
@@ -204,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -239,35 +252,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14056</th>\n",
-       "      <td>2025-09-02</td>\n",
-       "      <td>05:05:00</td>\n",
-       "      <td>428511</td>\n",
-       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
+       "      <th>14078</th>\n",
+       "      <td>2025-09-03</td>\n",
+       "      <td>02:13:00</td>\n",
+       "      <td>280000</td>\n",
+       "      <td>LIMP VEJA 500ML M USO ORIGINAL</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
        "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14040</th>\n",
-       "      <td>2025-09-01</td>\n",
-       "      <td>11:48:00</td>\n",
-       "      <td>428511</td>\n",
-       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
+       "      <th>14057</th>\n",
+       "      <td>2025-09-02</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>280000</td>\n",
+       "      <td>LIMP VEJA 500ML M USO ORIGINAL</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
+       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            DATA     HORAS     COD                              DESCRIÇÃO  \\\n",
-       "14056 2025-09-02  05:05:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
-       "14040 2025-09-01  11:48:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
+       "            DATA     HORAS     COD                       DESCRIÇÃO  \\\n",
+       "14078 2025-09-03  02:13:00  280000  LIMP VEJA 500ML M USO ORIGINAL   \n",
+       "14057 2025-09-02  06:06:00  280000  LIMP VEJA 500ML M USO ORIGINAL   \n",
        "\n",
-       "                          MOTIVO                           FUNCIONARIO  \n",
-       "14056  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
-       "14040  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
+       "                          MOTIVO              FUNCIONARIO  \n",
+       "14078  QUANTIDADE INFERIOR DA OS  ALEANDRA TRINDADE SOUSA  \n",
+       "14057  QUANTIDADE INFERIOR DA OS  ALEANDRA TRINDADE SOUSA  "
       ]
      },
      "metadata": {},
@@ -276,7 +289,7 @@
    ],
    "source": [
     "\n",
-    "comp = df_67.loc[df_67['COD'] == 428511]\n",
+    "comp = df_67.loc[df_67['COD'] == 280000]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
     "display(comp)"
    ]
