--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -1,5 +1,383 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "44118fba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from path_arquivos import *\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d4a1b156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_96 = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'DESCRICAO', 'OBS2', 'QTUNITCX', 'LASTROPAL', 'ALTURAPAL', 'QTTOTPAL','ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM', 'CAPACIDADE', 'ABASTECEPALETE', 'RUA', 'PREDIO', 'NIVEL', 'APTO','PRAZOVAL'])\n",
+    "colunas_int = ['CODPROD','QTUNITCX', 'LASTROPAL', 'QTTOTPAL', 'ALTURAPAL', 'CAPACIDADE','PRAZOVAL']\n",
+    "colunas_float = [ 'ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM']\n",
+    "df_96[colunas_int] = df_96[colunas_int].fillna(0).astype(int)  \n",
+    "df_96[colunas_float] = df_96[colunas_float].fillna(0).astype(float) \n",
+    "df = df_96[df_96[\"RUA\"].between(1,39)].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "48557e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESC</th>\n",
+       "      <th>OBS2</th>\n",
+       "      <th>QTUNITCX</th>\n",
+       "      <th>LASTROPAL</th>\n",
+       "      <th>ALTURAPAL</th>\n",
+       "      <th>QTTOTPAL</th>\n",
+       "      <th>ALTURAARM</th>\n",
+       "      <th>LARGURAARM</th>\n",
+       "      <th>COMPRIMENTOARM</th>\n",
+       "      <th>CAPACIDADE</th>\n",
+       "      <th>FLEG_ABST</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>PRAZOVAL</th>\n",
+       "      <th>FLEG_VAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>473528</td>\n",
+       "      <td>ABRACADEIRA NYLON BRANCA 2.5MM X 100MM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>75</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>903</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>473536</td>\n",
+       "      <td>ABRACADEIRA NYLON PRETA 2.5MM X 100MM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>75</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>904</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NÃO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>468976</td>\n",
+       "      <td>ABS ADULTO BIGFRAL PLUS S/AB UNISSEX20UN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>19</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "      <td>730</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>468063</td>\n",
+       "      <td>ABS ADULTO LIFREE CALCA 20UN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>20</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>730</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>449481</td>\n",
+       "      <td>ABS ALWAYS NOT SECA 28CM C/AB  G L16P14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>54</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>19</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>730</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14148</th>\n",
+       "      <td>466533</td>\n",
+       "      <td>XAROPE MONIN LE FRUIT 1LT KIWI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14149</th>\n",
+       "      <td>466534</td>\n",
+       "      <td>XAROPE MONIN LE FRUIT 1LT MARACUJA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>7</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14150</th>\n",
+       "      <td>456261</td>\n",
+       "      <td>XAROPE MONIN LE FRUIT 1LT MIRTILO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>7</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14151</th>\n",
+       "      <td>456260</td>\n",
+       "      <td>XAROPE MONIN LE FRUIT 1LT MORANGO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>7</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>203</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14152</th>\n",
+       "      <td>466532</td>\n",
+       "      <td>XAROPE MONIN LE FRUIT 1LT PESSEGO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>7</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>720</td>\n",
+       "      <td>SIM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9958 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          COD                                      DESC OBS2  QTUNITCX  \\\n",
+       "19     473528    ABRACADEIRA NYLON BRANCA 2.5MM X 100MM  NaN        50   \n",
+       "20     473536     ABRACADEIRA NYLON PRETA 2.5MM X 100MM  NaN        50   \n",
+       "26     468976  ABS ADULTO BIGFRAL PLUS S/AB UNISSEX20UN  NaN         8   \n",
+       "27     468063              ABS ADULTO LIFREE CALCA 20UN  NaN         1   \n",
+       "28     449481   ABS ALWAYS NOT SECA 28CM C/AB  G L16P14  NaN        12   \n",
+       "...       ...                                       ...  ...       ...   \n",
+       "14148  466533            XAROPE MONIN LE FRUIT 1LT KIWI  NaN         4   \n",
+       "14149  466534        XAROPE MONIN LE FRUIT 1LT MARACUJA  NaN         4   \n",
+       "14150  456261         XAROPE MONIN LE FRUIT 1LT MIRTILO  NaN         4   \n",
+       "14151  456260         XAROPE MONIN LE FRUIT 1LT MORANGO  NaN         4   \n",
+       "14152  466532         XAROPE MONIN LE FRUIT 1LT PESSEGO  NaN         4   \n",
+       "\n",
+       "       LASTROPAL  ALTURAPAL  QTTOTPAL  ALTURAARM  LARGURAARM  COMPRIMENTOARM  \\\n",
+       "19            15          5        75       13.0        20.5            30.0   \n",
+       "20            15          5        75       13.5        21.0            39.5   \n",
+       "26             6          5        30       19.5        42.0            45.0   \n",
+       "27             8          5        40       27.0        39.0            40.0   \n",
+       "28            18          3        54       34.0        20.0            32.5   \n",
+       "...          ...        ...       ...        ...         ...             ...   \n",
+       "14148         30          4       120       33.0        18.0            18.0   \n",
+       "14149         30          4       120       33.0        18.0            18.0   \n",
+       "14150         30          4       120       33.0        18.0            18.0   \n",
+       "14151         30          4       120       33.0        18.0            18.0   \n",
+       "14152         30          4       120       33.0        18.0            18.0   \n",
+       "\n",
+       "       CAPACIDADE FLEG_ABST  RUA  PREDIO  NIVEL  APTO  PRAZOVAL FLEG_VAL  \n",
+       "19             15       NÃO   32       1      1   903       720      SIM  \n",
+       "20             15       NÃO   32       9      1   904         0      NÃO  \n",
+       "26             12       NÃO   19      23      1   102       730      SIM  \n",
+       "27             15       NÃO   20      52      1   103       730      SIM  \n",
+       "28             15       NÃO   19      29      1   103       730      SIM  \n",
+       "...           ...       ...  ...     ...    ...   ...       ...      ...  \n",
+       "14148          60       NÃO    7      48      1   104       720      SIM  \n",
+       "14149          20       NÃO    7      78      1   104       720      SIM  \n",
+       "14150          20       NÃO    7      59      1   101       720      SIM  \n",
+       "14151          15       NÃO    7      88      1   203       720      SIM  \n",
+       "14152          15       NÃO    7      96      1   103       720      SIM  \n",
+       "\n",
+       "[9958 rows x 18 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "antigo = ['CODPROD', 'DESCRICAO', 'ABASTECEPALETE', ]\n",
+    "novo = ['COD', 'DESC', 'FLEG_ABST']\n",
+    "dic_zip = dict(zip(antigo, novo))\n",
+    "df.rename(columns=dic_zip, inplace= True)\n",
+    "df['FLEG_VAL'] = np.where(df['PRAZOVAL'] == 0,\"NÃO\",\"SIM\")\n",
+    "display(df)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".venv",
