--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "1cdb63ad",
    "metadata": {},
    "outputs": [
@@ -38,6 +38,7 @@
     "caminho = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\6.1.1 Analise de Cortes\\2025\\Acompanhamento de produtos cortados.xlsx'\n",
     "\n",
     "df_67 = pd.read_excel(caminho, sheet_name= 'CORTE 2025')\n",
+    "df_retorno = pd.read_excel(caminho, sheet_name= \"RETORNO\")\n",
     "df_86 = pd.read_excel(ar_xls.ar_86, usecols= ['Código', 'Descrição ', 'Estoque', 'Qtde Pedida', 'Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria', 'Reservado', 'Disponível'])\n",
     "\n",
     "display(df_67.columns)\n",
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "8c1640ae",
    "metadata": {},
    "outputs": [
@@ -87,55 +88,78 @@
        "      <th>Estoque</th>\n",
        "      <th>BLOQUEADO</th>\n",
        "      <th>var</th>\n",
+       "      <th>DATA</th>\n",
+       "      <th>RETURN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>464141</td>\n",
        "      <td>3</td>\n",
        "      <td>5224.50</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>378.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>-364.0</td>\n",
+       "      <td>362.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>-351.0</td>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>validade filial</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>468973</td>\n",
        "      <td>2</td>\n",
        "      <td>718.45</td>\n",
        "      <td>133.0</td>\n",
        "      <td>ACHOC NESCAU 200GR</td>\n",
-       "      <td>226.0</td>\n",
+       "      <td>85.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-223.0</td>\n",
+       "      <td>-82.0</td>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>3 caixa e 13 unidade no AP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>470878</td>\n",
        "      <td>2</td>\n",
        "      <td>698.87</td>\n",
        "      <td>56.0</td>\n",
        "      <td>FITA ADES EMPAC TEK BOND TRANSP 48MMX40M</td>\n",
-       "      <td>1200.0</td>\n",
+       "      <td>1191.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1200.0</td>\n",
+       "      <td>-1191.0</td>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>ultima entrada 08/09/2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>3</th>\n",
        "      <td>450655</td>\n",
        "      <td>2</td>\n",
        "      <td>303.98</td>\n",
        "      <td>8.0</td>\n",
        "      <td>SAB LUX 125GR BUQUE DE JASMIM</td>\n",
-       "      <td>580.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-579.0</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-575.0</td>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>ultima entrada 03/09/2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>4</th>\n",
+       "      <td>448268</td>\n",
+       "      <td>2</td>\n",
+       "      <td>157.18</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>SOPA MAGGI 68GR CREME CEBOLA</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>2 unidade no AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>280000</td>\n",
        "      <td>2</td>\n",
        "      <td>182.79</td>\n",
@@ -144,51 +168,69 @@
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-7.0</td>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>inversão, liberado pelo comprador</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>6</th>\n",
        "      <td>428511</td>\n",
        "      <td>2</td>\n",
        "      <td>29.04</td>\n",
        "      <td>2.0</td>\n",
        "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
-       "      <td>366.0</td>\n",
+       "      <td>340.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-366.0</td>\n",
+       "      <td>-340.0</td>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>ultima entrada 03/09/2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>7</th>\n",
        "      <td>474139</td>\n",
        "      <td>2</td>\n",
        "      <td>85.35</td>\n",
        "      <td>2.0</td>\n",
        "      <td>SAND HAV FEM SLIM GLITTER II CANYON 37/8</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-13.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>5 unidade no AP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "1   464141          3      5224.50        90.0   \n",
-       "3   468973          2       718.45       133.0   \n",
-       "4   470878          2       698.87        56.0   \n",
-       "8   450655          2       303.98         8.0   \n",
-       "17  280000          2       182.79         2.0   \n",
-       "18  428511          2        29.04         2.0   \n",
-       "22  474139          2        85.35         2.0   \n",
+       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
+       "0  464141          3      5224.50        90.0   \n",
+       "1  468973          2       718.45       133.0   \n",
+       "2  470878          2       698.87        56.0   \n",
+       "3  450655          2       303.98         8.0   \n",
+       "4  448268          2       157.18         3.0   \n",
+       "5  280000          2       182.79         2.0   \n",
+       "6  428511          2        29.04         2.0   \n",
+       "7  474139          2        85.35         2.0   \n",
        "\n",
-       "                                  Descrição   Estoque  BLOQUEADO     var  \n",
-       "1                    CREME LEITE TIROL 200GR    378.0       14.0  -364.0  \n",
-       "3                         ACHOC NESCAU 200GR    226.0        3.0  -223.0  \n",
-       "4   FITA ADES EMPAC TEK BOND TRANSP 48MMX40M   1200.0        0.0 -1200.0  \n",
-       "8              SAB LUX 125GR BUQUE DE JASMIM    580.0        1.0  -579.0  \n",
-       "17            LIMP VEJA 500ML M USO ORIGINAL      7.0        0.0    -7.0  \n",
-       "18     ESPONJA 3M LIMPEZA SC BRITE NAO RISCA    366.0        0.0  -366.0  \n",
-       "22  SAND HAV FEM SLIM GLITTER II CANYON 37/8     13.0        0.0   -13.0  "
+       "                                 Descrição   Estoque  BLOQUEADO     var  \\\n",
+       "0                   CREME LEITE TIROL 200GR    362.0       11.0  -351.0   \n",
+       "1                        ACHOC NESCAU 200GR     85.0        3.0   -82.0   \n",
+       "2  FITA ADES EMPAC TEK BOND TRANSP 48MMX40M   1191.0        0.0 -1191.0   \n",
+       "3             SAB LUX 125GR BUQUE DE JASMIM    575.0        0.0  -575.0   \n",
+       "4              SOPA MAGGI 68GR CREME CEBOLA      7.0        5.0    -2.0   \n",
+       "5            LIMP VEJA 500ML M USO ORIGINAL      7.0        0.0    -7.0   \n",
+       "6     ESPONJA 3M LIMPEZA SC BRITE NAO RISCA    340.0        0.0  -340.0   \n",
+       "7  SAND HAV FEM SLIM GLITTER II CANYON 37/8     10.0        0.0   -10.0   \n",
+       "\n",
+       "        DATA                             RETURN  \n",
+       "0 2025-09-10                    validade filial  \n",
+       "1 2025-09-09         3 caixa e 13 unidade no AP  \n",
+       "2 2025-09-09          ultima entrada 08/09/2025  \n",
+       "3 2025-09-10          ultima entrada 03/09/2025  \n",
+       "4 2025-09-10                    2 unidade no AP  \n",
+       "5 2025-09-09  inversão, liberado pelo comprador  \n",
+       "6 2025-09-10          ultima entrada 03/09/2025  \n",
+       "7 2025-09-10                    5 unidade no AP  "
       ]
      },
      "metadata": {},
@@ -210,14 +252,15 @@
     "df['var'] = df['BLOQUEADO'] - df['Estoque']\n",
     "\n",
     "validar = df.loc[(df['var'] < 0) & (df['QTDE_DIAS'] > 1)]\n",
-    "\n",
+    "validar = validar.merge(df_retorno, left_on= 'COD', right_on= 'CODPROD', how= \"left\").drop(columns='CODPROD')\n",
+    "validar[['RETURN', 'DATA']] = validar[['RETURN','DATA']].fillna(\"\")\n",
     "\n",
     "display(validar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -252,35 +295,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14078</th>\n",
-       "      <td>2025-09-03</td>\n",
-       "      <td>02:13:00</td>\n",
-       "      <td>280000</td>\n",
-       "      <td>LIMP VEJA 500ML M USO ORIGINAL</td>\n",
+       "      <th>14056</th>\n",
+       "      <td>2025-09-02</td>\n",
+       "      <td>05:05:00</td>\n",
+       "      <td>428511</td>\n",
+       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
        "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14057</th>\n",
-       "      <td>2025-09-02</td>\n",
-       "      <td>06:06:00</td>\n",
-       "      <td>280000</td>\n",
-       "      <td>LIMP VEJA 500ML M USO ORIGINAL</td>\n",
+       "      <th>14040</th>\n",
+       "      <td>2025-09-01</td>\n",
+       "      <td>11:48:00</td>\n",
+       "      <td>428511</td>\n",
+       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            DATA     HORAS     COD                       DESCRIÇÃO  \\\n",
-       "14078 2025-09-03  02:13:00  280000  LIMP VEJA 500ML M USO ORIGINAL   \n",
-       "14057 2025-09-02  06:06:00  280000  LIMP VEJA 500ML M USO ORIGINAL   \n",
+       "            DATA     HORAS     COD                              DESCRIÇÃO  \\\n",
+       "14056 2025-09-02  05:05:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
+       "14040 2025-09-01  11:48:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
        "\n",
-       "                          MOTIVO              FUNCIONARIO  \n",
-       "14078  QUANTIDADE INFERIOR DA OS  ALEANDRA TRINDADE SOUSA  \n",
-       "14057  QUANTIDADE INFERIOR DA OS  ALEANDRA TRINDADE SOUSA  "
+       "                          MOTIVO                           FUNCIONARIO  \n",
+       "14056  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
+       "14040  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
       ]
      },
      "metadata": {},
@@ -289,7 +332,7 @@
    ],
    "source": [
     "\n",
-    "comp = df_67.loc[df_67['COD'] == 280000]\n",
+    "comp = df_67.loc[df_67['COD'] == 428511]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
     "display(comp)"
    ]
